Kolekasi-blom beres by opay

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="stylesheet" href="asset/icon/css/all.min.css" />
+
     <link rel="stylesheet" href="asset/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="asset/css/owl.min.css" />
     <link href="asset/swiper/swiper-bundle.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="asset/aos/aos.css" />
     <link rel="stylesheet" href="asset/css/index.css" />
+    <link href="asset/bootstrap-icons/bootstrap-icons.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -220,7 +221,7 @@
 
     <!-- section about-->
     <section class="container-fluid mt-5 about">
-      <div class="container border">
+      <div class="container">
         <div class="about">
           <div class="about-content row justify-content-center">
             <div class="col-lg-6 col-md-10 col-sm-12 about-title">
@@ -279,7 +280,7 @@
       </div>
     </section>
 
-    <section class="container-fluid koleksi border">
+    <section class="container-fluid koleksi">
       <div class="koleksi-content row">
         <div class="col-lg-12">
           <p class="koleksi-title-head mx-auto col-lg-8">
@@ -287,7 +288,7 @@
           </p>
         </div>
 
-        <div class="col-lg-12">
+        <div class="col-lg-12 mt-5">
           <div class="row">
             <!-- Kolom kiri gambar besar -->
             <div class="col-lg-7 mb-3 col-md-12">
@@ -298,17 +299,19 @@
                 >
                   <div class="koleksi display-table">
                     <div class="table-cell">
-                      <div class="container border-white">
+                      <div class="container">
                         <div class="row">
                           <div class="col-lg-12">
                             <div class="koleksi-body">
-                              <h1 class="koleksi-title">
-                                Sepatu Kulit Khas Garut
-                              </h1>
-                              <p class="koleksi-desc">
-                                Lorem Ipsum is simply dummy text of the printing
-                                and typesetting industry.
-                              </p>
+                              <div class="blur-cover">
+                                <h1 class="koleksi-title">
+                                  Gantungan Kunci Khas Garut
+                                </h1>
+                                <p class="koleksi-desc">
+                                  Lorem Ipsum is simply dummy text of the
+                                  printing and typesetting industry.
+                                </p>
+                              </div>
                             </div>
                           </div>
                         </div>
@@ -332,13 +335,20 @@
                         <div class="row">
                           <div class="col-lg-12">
                             <div class="koleksi-body">
-                              <h1 class="koleksi-title">
-                                Tas Kulit Khas Garut
-                              </h1>
-                              <p class="koleksi-desc">
-                                Lorem Ipsum is simply dummy text of the printing
-                                and typesetting industry.
-                              </p>
+                              <div class="blur-cover">
+                                <h1 class="koleksi-title">
+                                  Gantungan Kunci Khas Garut
+                                </h1>
+                                <p class="koleksi-desc">
+                                  Lorem Ipsum is simply dummy text of the
+                                  printing and typesetting industry.
+                                </p>
+                                <div class="col-lg-12">
+                                  <span class="float-end arrow-fill"
+                                    ><i class="bi bi-caret-right-fill"></i
+                                  ></span>
+                                </div>
+                              </div>
                             </div>
                           </div>
                         </div>
@@ -359,13 +369,15 @@
                         <div class="row">
                           <div class="col-lg-12">
                             <div class="koleksi-body">
-                              <h1 class="koleksi-title">
-                                Gantungan Kunci Khas Garut
-                              </h1>
-                              <p class="koleksi-desc">
-                                Lorem Ipsum is simply dummy text of the printing
-                                and typesetting industry.
-                              </p>
+                              <div class="blur-cover">
+                                <h1 class="koleksi-title">
+                                  Gantungan Kunci Khas Garut
+                                </h1>
+                                <p class="koleksi-desc">
+                                  Lorem Ipsum is simply dummy text of the
+                                  printing and typesetting industry.
+                                </p>
+                              </div>
                             </div>
                           </div>
                         </div>
