Kolekasi-tahap final opay

--- a/index.html
+++ b/index.html
@@ -282,71 +282,47 @@
 
     <section class="container-fluid koleksi">
       <div class="koleksi-content row">
-        <div class="col-lg-12">
-          <p class="koleksi-title-head mx-auto col-lg-8">
-            Koleksi Sukaregang Leather Craft
-          </p>
-        </div>
+        <div class="col-12 col-lg-12 col-md-12">
+          <div class="col-lg-12">
+            <p class="koleksi-title-head mx-auto col-lg-8">
+              Koleksi Sukaregang Leather Craft
+            </p>
+          </div>
 
-        <div class="col-lg-12 mt-5">
-          <div class="row">
-            <!-- Kolom kiri gambar besar -->
-            <div class="col-lg-7 mb-3 col-md-12">
-              <div class="koleksi position-relative koleksi-kiri">
-                <div
-                  class="koleksi-item-a bg-image"
-                  style="background-image: url(asset/img/about.png)"
-                >
-                  <div class="koleksi display-table">
-                    <div class="table-cell">
-                      <div class="container">
-                        <div class="row">
-                          <div class="col-lg-12">
-                            <div class="koleksi-body">
-                              <div class="blur-cover">
-                                <h1 class="koleksi-title">
-                                  Gantungan Kunci Khas Garut
-                                </h1>
-                                <p class="koleksi-desc">
-                                  Lorem Ipsum is simply dummy text of the
-                                  printing and typesetting industry.
-                                </p>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <!-- Kolom kanan, 2 card bertumpuk -->
-            <div class="col-lg-5 col-md-12 d-flex flex-column">
-              <div class="koleksi position-relative koleksi-kanan">
-                <div
-                  class="koleksi-item-a bg-image"
-                  style="background-image: url(asset/img/about.png)"
-                >
-                  <div class="koleksi display-table">
-                    <div class="table-cell">
-                      <div class="container border-white">
-                        <div class="row">
-                          <div class="col-lg-12">
-                            <div class="koleksi-body">
-                              <div class="blur-cover">
-                                <h1 class="koleksi-title">
-                                  Gantungan Kunci Khas Garut
-                                </h1>
-                                <p class="koleksi-desc">
-                                  Lorem Ipsum is simply dummy text of the
-                                  printing and typesetting industry.
-                                </p>
-                                <div class="col-lg-12">
-                                  <span class="float-end arrow-fill"
-                                    ><i class="bi bi-caret-right-fill"></i
-                                  ></span>
+          <div class="col-lg-11 col-md-11 col-sm-11 col-11 mx-auto mt-5 border">
+            <div class="row">
+              <!-- Kolom kiri gambar besar -->
+              <div class="col-lg-7 mb-3 col-md-12">
+                <div class="koleksi position-relative koleksi-kiri">
+                  <div
+                    class="koleksi-item-a bg-image"
+                    style="background-image: url(asset/img/about.png)"
+                  >
+                    <div class="koleksi display-table">
+                      <div class="table-cell">
+                        <div class="container">
+                          <div class="row">
+                            <div class="col-lg-12 col-12 col-md-12">
+                              <div class="koleksi-body">
+                                <div class="blur-cover-kiri">
+                                  <h1 class="koleksi-title">
+                                    Gantungan Kunci Khas Garut
+                                  </h1>
+                                  <p class="koleksi-desc">
+                                    Lorem ipsum dolor sit amet consectetur
+                                    adipisicing elit. Odio nisi obcaecati, autem
+                                    voluptatem earum et accusamus unde ratione
+                                    eum mollitia veritatis in laboriosam vero
+                                    voluptate vel molestias temporibus nesciunt
+                                    culpa! Dolores nemo itaque expedita quidem
+                                    natus consectetur beatae quia doloremque
+                                    nisi.
+                                  </p>
+                                  <div class="col-lg-12 mt-4">
+                                    <span class="float-end arrow-fill"
+                                      ><i class="bi bi-caret-right-fill"></i
+                                    ></span>
+                                  </div>
                                 </div>
                               </div>
                             </div>
@@ -358,25 +334,67 @@
                 </div>
               </div>
 
-              <div class="koleksi position-relative koleksi-kanan">
-                <div
-                  class="koleksi-item-a bg-image"
-                  style="background-image: url(asset/img/about.png)"
-                >
-                  <div class="koleksi display-table">
-                    <div class="table-cell">
-                      <div class="container border-white">
-                        <div class="row">
-                          <div class="col-lg-12">
-                            <div class="koleksi-body">
-                              <div class="blur-cover">
-                                <h1 class="koleksi-title">
-                                  Gantungan Kunci Khas Garut
-                                </h1>
-                                <p class="koleksi-desc">
-                                  Lorem Ipsum is simply dummy text of the
-                                  printing and typesetting industry.
-                                </p>
+              <!-- Kolom kanan, 2 card bertumpuk -->
+              <div class="col-lg-5 col-md-12 d-flex flex-column">
+                <div class="koleksi position-relative koleksi-kanan">
+                  <div
+                    class="koleksi-item-a bg-image"
+                    style="background-image: url(asset/img/about.png)"
+                  >
+                    <div class="koleksi display-table">
+                      <div class="table-cell">
+                        <div class="container border-white">
+                          <div class="row">
+                            <div class="col-lg-12">
+                              <div class="koleksi-body">
+                                <div class="blur-cover-kanan">
+                                  <h1 class="koleksi-title">
+                                    Gantungan Kunci Khas Garut
+                                  </h1>
+                                  <p class="koleksi-desc">
+                                    Lorem Ipsum is simply dummy text of the
+                                    printing and typesetting industry.
+                                  </p>
+                                  <div class="col-lg-12">
+                                    <span class="float-end arrow-fill"
+                                      ><i class="bi bi-caret-right-fill"></i
+                                    ></span>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="koleksi position-relative koleksi-kanan">
+                  <div
+                    class="koleksi-item-a bg-image"
+                    style="background-image: url(asset/img/about.png)"
+                  >
+                    <div class="koleksi display-table">
+                      <div class="table-cell">
+                        <div class="container border-white">
+                          <div class="row">
+                            <div class="col-lg-12">
+                              <div class="koleksi-body">
+                                <div class="blur-cover-kanan">
+                                  <h1 class="koleksi-title">
+                                    Gantungan Kunci Khas Garut
+                                  </h1>
+                                  <p class="koleksi-desc">
+                                    Lorem Ipsum is simply dummy text of the
+                                    printing and typesetting industry.
+                                  </p>
+                                  <div class="col-lg-12">
+                                    <span class="float-end arrow-fill"
+                                      ><i class="bi bi-caret-right-fill"></i
+                                    ></span>
+                                  </div>
+                                </div>
                               </div>
                             </div>
                           </div>
@@ -388,20 +406,20 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="col-lg-9">
-          <p class="koleksi-foot">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem
-            assumenda, repellendus possimus laborum officiis minus, quia
-            consequuntur atque magni exercitationem nisi deserunt natus
-            doloribus praesentium ipsum optio sed rem aut dolorem vel aliquid
-            similique quasi suscipit voluptatum? Nulla cum, at mollitia
-            recusandae eum magnam nostrum quos, perspiciatis ex reprehenderit
-            natus incidunt quae iusto nobis aspernatur ullam vel amet.
-            Consequuntur excepturi provident in voluptates saepe nobis alias
-            possimus vel a nesciunt! Hic consectetur ipsam alias inventore
-            tempore doloremque voluptas possimus maxime?
-          </p>
+          <div class="col-lg-9">
+            <p class="koleksi-foot">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem
+              assumenda, repellendus possimus laborum officiis minus, quia
+              consequuntur atque magni exercitationem nisi deserunt natus
+              doloribus praesentium ipsum optio sed rem aut dolorem vel aliquid
+              similique quasi suscipit voluptatum? Nulla cum, at mollitia
+              recusandae eum magnam nostrum quos, perspiciatis ex reprehenderit
+              natus incidunt quae iusto nobis aspernatur ullam vel amet.
+              Consequuntur excepturi provident in voluptates saepe nobis alias
+              possimus vel a nesciunt! Hic consectetur ipsam alias inventore
+              tempore doloremque voluptas possimus maxime?
+            </p>
+          </div>
         </div>
       </div>
     </section>
