--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>Beranda</title>
 
     <link rel="stylesheet" href="asset/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="asset/css/owl.min.css" />
@@ -19,35 +19,35 @@
       <ul class="nav justify-content-center">
         <li class="nav-item">
           <a class="fw-bold text-uppercase ahov text-decoration-none" href="#"
-            >Home</a
+            >Beranda</a
           >
         </li>
         <li class="nav-item">
           <a
             class="fw-bold text-uppercase ahov text-decoration-none"
             href="#portofolio"
-            >Portofolio</a
+            >Tentang</a
           >
         </li>
         <li class="nav-item">
           <a
             class="fw-bold text-uppercase ahov text-decoration-none"
             href="#about"
-            >About Me</a
+            >Koleksi</a
           >
         </li>
         <li class="nav-item">
           <a
             class="fw-bold text-uppercase ahov text-decoration-none"
             href="#code"
-            >Code</a
+            >Testimoni</a
           >
         </li>
         <li class="nav-item">
           <a
             class="fw-bold text-uppercase ahov text-decoration-none"
             href="#history"
-            >History</a
+            >Video</a
           >
         </li>
         <li class="nav-item">
@@ -224,10 +224,10 @@
       <div class="container">
         <div class="about">
           <div class="about-content row justify-content-center">
-            <div class="col-lg-6 col-md-10 col-sm-12 about-title">
+            <div class="col-lg-5 col-md-10 col-sm-12 about-title">
               Tentang Sukaregang Leather Craft
             </div>
-            <div class="col-lg-6 about-desc">
+            <div class="col-lg-7 about-desc">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam
               sapiente harum exercitationem quo, a quia, nobis natus repellendus
               nisi praesentium temporibus odit ullam facilis laborum recusandae
@@ -289,7 +289,7 @@
             </p>
           </div>
 
-          <div class="col-lg-11 col-md-11 col-sm-11 col-11 mx-auto mt-5 border">
+          <div class="col-lg-11 col-md-11 col-sm-11 col-11 mx-auto mt-5">
             <div class="row">
               <!-- Kolom kiri gambar besar -->
               <div class="col-lg-6 mb-3 col-md-12">
@@ -318,7 +318,7 @@
                                     natus consectetur beatae quia doloremque
                                     nisi.
                                   </p>
-                                  <div class="col-lg-12 mt-4">
+                                  <div class="col-lg-12">
                                     <span class="float-end arrow-fill"
                                       ><i class="bi bi-caret-right-fill"></i
                                     ></span>
