--- a/index.html
+++ b/index.html
@@ -106,37 +106,29 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a
-                class="fw-bold text-uppercase nav-link text-decoration-none"
+                class="fw-bold nav-link text-decoration-none"
                 href="javascript:void(0)"
                 onclick="window.scrollTo({ top: 0, behavior: 'smooth' });"
                 >Beranda</a
               >
             </li>
             <li class="nav-item">
-              <a
-                class="fw-bold text-uppercase nav-link text-decoration-none"
-                href="#tentang"
+              <a class="fw-bold nav-link text-decoration-none" href="#tentang"
                 >Tentang</a
               >
             </li>
             <li class="nav-item">
-              <a
-                class="fw-bold text-uppercase nav-link text-decoration-none"
-                href="koleksi"
+              <a class="fw-bold nav-link text-decoration-none" href="#koleksi"
                 >Koleksi</a
               >
             </li>
             <li class="nav-item">
-              <a
-                class="fw-bold text-uppercase nav-link text-decoration-none"
-                href="testimoni"
+              <a class="fw-bold nav-link text-decoration-none" href="testimoni"
                 >Testimoni</a
               >
             </li>
             <li class="nav-item">
-              <a
-                class="fw-bold text-uppercase nav-link text-decoration-none"
-                href="#kontak"
+              <a class="fw-bold nav-link text-decoration-none" href="#kontak"
                 >Kontak</a
               >
             </li>
@@ -648,7 +640,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-9">
+          <div class="col-lg-11 mx-auto">
             <p class="koleksi-foot">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem
               assumenda, repellendus possimus laborum officiis minus, quia
@@ -669,15 +661,22 @@
     <!-- START TESTIMONY -->
     <hr
       class="mx-auto"
-      style="width: 90%; height: 4px; background-color: black; border: none"
+      style="
+        width: 90%;
+        height: 4px;
+        margin-top: 7rem;
+        background-color: black;
+        border: none;
+      "
     />
-    <section class="testimony-section" id="testimoni">
+
+    <section class="testimony-section mt-5" id="testimoni">
       <div class="testimony-wrapper">
         <!--judul dan button-->
         <div class="d-flex justify-content-between align-items-center mb-4">
-          <h2 class="m-0">Testimoni</h2>
+          <h2 class="m-0 testimoni-title">Testimoni</h2>
           <button
-            class="btn btn-dark rounded-pill justify-content-center d-flex"
+            class="btn btn-dark rounded-pill fw-bold justify-content-center d-flex"
             data-bs-toggle="modal"
             data-bs-target="#modalTestimony"
           >
@@ -689,21 +688,24 @@
         <div class="row g-4">
           <!-- Kartu 1 -->
           <div class="col-md-4">
-            <div class="position-relative overflow-hidden rounded-4">
+            <div class="card-testimoni">
               <img
-                src="asset\img\testimoni_img\ecd609ed0c843cad6a63b7fb9f997f4df76757f1.jpg"
-                class="w-100"
-                alt="testimoni Nauval"
+                src="asset/img/testimoni_img/testimoni.jpg"
+                alt="Testimoni Nauval"
                 style="object-fit: cover; height: 500px"
+                class="w-100"
               />
-
-              <div class="overlay overlay-a rounded-3"></div>
-
-              <div class="position-absolute bottom-0 w-100 p-3 text-white">
-                <h5 class="m-0">Nauval</h5>
+              <div class="overlay"></div>
+              <div
+                class="details position-absolute bottom-0 w-100 p-3 text-white"
+              >
+                <h5 class="cardHeader">Nauval</h5>
                 <small
-                  >Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.</small
+                  >Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Molestiae, consequuntur impedit doloremque ducimus deserunt
+                  tenetur deleniti nesciunt. Nobis, commodi sapiente. Officia
+                  vitae ipsum tenetur consectetur, explicabo delectus aut quidem
+                  nam?</small
                 >
               </div>
             </div>
@@ -711,19 +713,24 @@
 
           <!-- Kartu 2 -->
           <div class="col-md-4">
-            <div class="position-relative overflow-hidden rounded-4">
+            <div class="card-testimoni">
               <img
-                src="asset\img\testimoni_img\ecd609ed0c843cad6a63b7fb9f997f4df76757f1.jpg"
-                class="w-100"
-                alt="testimoni Shaktya"
+                src="asset/img/testimoni_img/testimoni.jpg"
+                alt="Testimoni Nauval"
                 style="object-fit: cover; height: 500px"
+                class="w-100"
               />
-              <div class="overlay overlay-a rounded-3"></div>
-              <div class="position-absolute bottom-0 w-100 p-3 text-white">
-                <h5 class="m-0">Shaktya</h5>
+              <div class="overlay"></div>
+              <div
+                class="details position-absolute bottom-0 w-100 p-3 text-white"
+              >
+                <h5 class="cardHeader">Nauval</h5>
                 <small
-                  >Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.</small
+                  >Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Iusto placeat, quibusdam, perspiciatis eligendi id tempore
+                  quos dolorem, nulla asperiores accusamus officiis! Quod dicta,
+                  magni voluptas itaque perferendis cum cumque
+                  necessitatibus.</small
                 >
               </div>
             </div>
@@ -731,26 +738,31 @@
 
           <!-- Kartu 3 -->
           <div class="col-md-4">
-            <div class="position-relative overflow-hidden rounded-4">
+            <div class="card-testimoni">
               <img
-                src="asset\img\testimoni_img\ecd609ed0c843cad6a63b7fb9f997f4df76757f1.jpg"
-                class="w-100"
-                alt="Testimoni agus"
+                src="asset/img/testimoni_img/testimoni.jpg"
+                alt="Testimoni Nauval"
                 style="object-fit: cover; height: 500px"
+                class="w-100"
               />
-              <div class="overlay overlay-a rounded-3"></div>
-              <div class="position-absolute bottom-0 w-100 p-3 text-white">
-                <h5 class="m-0">Agus</h5>
+              <div class="overlay"></div>
+              <div
+                class="details position-absolute bottom-0 w-100 p-3 text-white"
+              >
+                <h5 class="cardHeader">Nauval</h5>
                 <small
-                  >Lorem Ipsum is simply dummy text of the printing and
-                  typesetting industry.</small
+                  >Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Iusto placeat, quibusdam, perspiciatis eligendi id tempore
+                  quos dolorem, nulla asperiores accusamus officiis! Quod dicta,
+                  magni voluptas itaque perferendis cum cumque
+                  necessitatibus.</small
                 >
               </div>
             </div>
           </div>
 
           <!-- Paragraf di bawah -->
-          <p class="mt-5 paragraf-testimony">
+          <p class="mt-3 paragraf-testimony">
             Lorem Ipsum is simply dummy text of the printing and typesetting
             industry. Lorem Ipsum has been the industry's standard dummy text
             ever since the 1500s, when an unknown printer took a galley of type
@@ -762,22 +774,37 @@
         <!--End Card-->
       </div>
     </section>
+
     <hr
       class="mx-auto"
-      style="width: 90%; height: 4px; background-color: black; border: none"
+      style="
+        width: 90%;
+        margin-top: 5rem;
+        height: 4px;
+        background-color: black;
+        border: none;
+      "
     />
     <!--END TESTIMONY-->
 
     <!--START VIDEO-->
     <section>
-      <div class="d-flex justify-content-center">
-        <video width="1210" controls class="rounded-4">
-          <source src="video/nama_video.mp4" type="video/mp4" />
-          Browser Anda tidak mendukung pemutaran video.
-        </video>
+      <div class="d-flex justify-content-center mt-5">
+        <div class="col-lg-11 col-11 col-sm-11 col-md-11">
+          <video controls class="rounded-4 video-responsive">
+            <source src="video/nama_video.mp4" type="video/mp4" />
+            Browser Anda tidak mendukung pemutaran video.
+          </video>
+        </div>
       </div>
     </section>
     <!--END VIDEO-->
+
+    <section class="container-fluid">
+      <div class="kontak">
+        <div class="container"></div>
+      </div>
+    </section>
 
     <!--Content Modal-->
     <div
@@ -791,7 +818,9 @@
         <div class="modal-content">
           <!--Header Modal-->
           <div class="modal-header">
-            <h1 class="modal-title fs-5" id="exampleModalLabel">Testimoni</h1>
+            <h1 class="modal-title fs-5 fw-bold" id="exampleModalLabel">
+              Testimoni
+            </h1>
             <button
               type="button"
               class="btn-close"
@@ -806,10 +835,10 @@
               <div class="swiper-wrapper">
                 <!--content 1-->
                 <div
-                  class="swiper-slide slide-modal overflow-hidden shadow-lg bg-body-tertiary"
+                  class="swiper-slide slide-modal overflow-hidden bg-body-tertiary"
                 >
                   <img
-                    src="asset\img\testimoni_img\ecd609ed0c843cad6a63b7fb9f997f4df76757f1.jpg"
+                    src="asset/img/testimoni_img/testimoni.jpg"
                     alt="deskripsi Nauval"
                     width="400px"
                     height="300px"
@@ -828,10 +857,10 @@
 
                 <!--content 2-->
                 <div
-                  class="swiper-slide slide-modal overflow-hidden shadow-lg bg-body-tertiary"
+                  class="swiper-slide slide-modal overflow-hidden bg-body-tertiary"
                 >
                   <img
-                    src="asset\img\testimoni_img\ecd609ed0c843cad6a63b7fb9f997f4df76757f1.jpg"
+                    src="asset/img/testimoni_img/testimoni.jpg"
                     alt="deskripsi Nauval"
                     width="400px"
                     height="300px"
@@ -850,10 +879,10 @@
 
                 <!--Content 3-->
                 <div
-                  class="swiper-slide slide-modal overflow-hidden shadow-lg bg-body-tertiary"
+                  class="swiper-slide slide-modal overflow-hidden rounded bg-body-tertiary"
                 >
                   <img
-                    src="asset\img\testimoni_img\ecd609ed0c843cad6a63b7fb9f997f4df76757f1.jpg"
+                    src="asset/img/testimoni_img/testimoni.jpg"
                     alt="deskripsi Nauval"
                     width="400px"
                     height="300px"
@@ -873,12 +902,43 @@
               <div class="swiper-pagination">sss</div>
             </div>
           </div>
-
-          <!--Footer Modal-->
         </div>
       </div>
     </div>
     <!--End Content Modal-->
+
+    <footer class="text-center text-lg-start text-white mt-5">
+      <div class="container p-4 pb-0">
+        <hr class="mb-4" style="color: black" />
+
+        <div class="container-fluid">
+          <div class="row">
+            <p class="h1 text-center text-uppercase text-dark fw-bold">
+              Sukaregang Craft Leather
+            </p>
+          </div>
+        </div>
+
+        <hr class="mb-4" style="color: black" />
+
+        <section class="mb-4 text-center">
+          <a class="m-1" href=""
+            ><img src="asset/img/itsdaylogo.png" alt="" class="footer-logo"
+          /></a>
+          <a class="m-1" href=""
+            ><img src="asset/img/logo-diskuk.png" alt="" class="footer-logo"
+          /></a>
+          <a class="m-1" href=""
+            ><img src="asset/img/masoem.png" alt="" class="footer-logo"
+          /></a>
+        </section>
+      </div>
+
+      <div class="text-center text-dark p-3 bg-dark bg-opacity-10">
+        © 2025 Copyright:
+        <a class="text-dark">Sukaregang Craft Leather</a>
+      </div>
+    </footer>
 
     <script src="asset/aos/aos.js"></script>
     <script src="asset/bootstrap/js/bootstrap.bundle.min.js"></script>
