--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@
 
 
 
-    <button class="btn-bot" id="openChatbot">
+    <!-- <button class="btn-bot" id="openChatbot">
         <i class="bi bi-robot"></i>
         <span>Sikulit</span>
     </button>
@@ -901,7 +901,7 @@
             <button onclick="balas('kirim')">🚚 Berapa lama proses kirimnya?</button>
         </div>
         <div class="chatbox-answer" id="chatboxAnswer"></div>
-    </div>
+    </div> -->
 
 
 
