--- a/index.html
+++ b/index.html
@@ -238,7 +238,9 @@
                             Tas Kulit Asli, Rasa Garut, Kualitas Dunia
                         </p>
                     </div>
-                    <div class="col-12 col-sm-12 col-md-4 col-lg-4 mb-5" data-aos="fade-right" data-aos-delay="1000">
+                    <div class="col-12 col-sm-12 col-md-4 col-lg-4 mb-5" data-aos="fade-up"
+                    data-aos-easing="linear"
+                    data-aos-duration="1500">
                         <div class="card-custom mx-auto">
                             <div class="content">
                                 <p class="heading">Kulit Asli Garut Berkualitas dari Kulit Domba Pilihan</p>
@@ -251,7 +253,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-4 col-12 col-lg-4 mb-5" data-aos="fade-up" data-aos-delay="1000">
+                    <div class="col-sm-12 col-md-4 col-12 col-lg-4 mb-5" data-aos="fade-up"
+                    data-aos-easing="linear"
+                    data-aos-duration="1700">
                         <div class="card-custom mx-auto">
                             <div class="content">
                                 <p class="heading">Desain Elegan Menarik &amp; Eksklusif</p>
@@ -264,7 +268,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-4 col-12 col-lg-4" data-aos="fade-left" data-aos-delay="1000">
+                    <div class="col-sm-12 col-md-4 col-12 col-lg-4" data-aos="fade-up"
+                    data-aos-easing="linear"
+                    data-aos-duration="1900">
                         <div class="card-custom mx-auto">
                             <div class="content">
                                 <p class="heading">Harga Terjangkau &amp; Bisa Custom</p>
@@ -287,10 +293,10 @@
         <div class="container">
             <div class="about">
                 <div class="about-content row justify-content-center">
-                    <div class="col-lg-6 col-md-10 col-12 col-sm-12 about-title" data-aos="fade-right">
+                    <div class="col-lg-6 col-md-10 col-12 col-sm-12 about-title" data-aos="zoom-in-right" data-aos-delay="1300">
                         Tentang Sukaregang Leather Craft
                     </div>
-                    <div class="col-lg-6 about-desc col-md-12 col-12" data-aos="fade-left" data-aos-delay="1000">
+                    <div class="col-lg-6 about-desc col-md-12 col-12" data-aos="zoom-in-left" data-aos-delay="1300">
                         Sukaregang Leather Craft adalah UMKM lokal Garut yang bergerak di
                         bidang kerajinan kulit asli. Kami memproduksi berbagai produk
                         eksklusif seperti tas, dompet, sepatu, dan aksesoris berbahan
@@ -886,7 +892,7 @@
 
 
 
-    <!-- <button class="btn-bot" id="openChatbot">
+    <button class="btn-bot" id="openChatbot">
         <i class="bi bi-robot"></i>
         <span>Sikulit</span>
     </button>
@@ -901,7 +907,7 @@
             <button onclick="balas('kirim')">🚚 Berapa lama proses kirimnya?</button>
         </div>
         <div class="chatbox-answer" id="chatboxAnswer"></div>
-    </div> -->
+    </div>
 
 
 
