--- a/index.html
+++ b/index.html
@@ -293,10 +293,10 @@
         <div class="container">
             <div class="about">
                 <div class="about-content row justify-content-center">
-                    <div class="col-lg-6 col-md-10 col-12 col-sm-12 about-title" data-aos="zoom-in-right" data-aos-delay="1300">
+                    <div class="col-lg-6 col-md-10 col-12 col-sm-12 about-title" data-aos="flip-up" data-aos-delay="1300">
                         Tentang Sukaregang Leather Craft
                     </div>
-                    <div class="col-lg-6 about-desc col-md-12 col-12" data-aos="zoom-in-left" data-aos-delay="1300">
+                    <div class="col-lg-6 about-desc col-md-12 col-12" data-aos="flip-up" data-aos-delay="1300">
                         Sukaregang Leather Craft adalah UMKM lokal Garut yang bergerak di
                         bidang kerajinan kulit asli. Kami memproduksi berbagai produk
                         eksklusif seperti tas, dompet, sepatu, dan aksesoris berbahan
