--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                               class="d-flex justify-content-center gap-1 flex-wrap justify-content-lg-start"
                             >
                               <div class="col-auto">
-                                <a class="btn-koleksi">
+                                <a class="btn-koleksi" href="#koleksi">
                                   <span class="txt-btn-koleksi"
                                     >Beli Sekarang
                                   </span></a
@@ -217,7 +217,7 @@
                               class="d-flex justify-content-center gap-1 flex-wrap justify-content-lg-start"
                             >
                               <div class="col-auto">
-                                <a class="btn-koleksi">
+                                <a class="btn-koleksi" href="#koleksi">
                                   <span class="txt-btn-koleksi"
                                     >Beli Sekarang
                                   </span></a
@@ -265,7 +265,7 @@
                               class="d-flex justify-content-center gap-1 flex-wrap justify-content-lg-start"
                             >
                               <div class="col-auto">
-                                <a class="btn-koleksi">
+                                <a class="btn-koleksi" href="#koleksi">
                                   <span class="txt-btn-koleksi"
                                     >Beli Sekarang
                                   </span></a
