--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
   </head>
 
   <body>
-    <!-- Nav -->
+    <!-- Nav desktop -->
 
     <nav class="navbar-custom d-none d-sm-none d-md-block d-lg-block fixed-top">
       <div
         class="container d-flex justify-content-between align-items-center py-2"
       >
-        <!-- Logo kiri -->
         <div class="navbar-brand">
           <a
             href="javascript:void(0)"
@@ -139,7 +138,7 @@
 
     <!-- Nav -->
 
-    <!-- Hero -->
+    <!-- Hero section\slider -->
     <section class="container-fluid mt-3">
       <div class="row justify-content-center">
         <div class="col-11 mt-5">
@@ -293,7 +292,7 @@
       </div>
     </section>
     <!-- Hero -->
-
+    <!-- kelebihan section -->
     <section class="container-fluid mt-5 mb-3">
       <div class="container-kelebihan">
         <div class="kelebihan">
@@ -393,7 +392,6 @@
         </div>
       </div>
     </section>
-
     <section class="container-fluid mt-2">
       <div class="row justify-content-center">
         <div class="col-11 mt-5">
@@ -433,11 +431,13 @@
         </div>
       </div>
     </section>
-    <!-- section -->
+    <!-- section about -->
+
+    <!-- section tutorial -->
 
     <section id="" class="container-fluid tutorial mb-5">
       <div class="container" data-aos="fade-up">
-        <h2 class="tutorial-title">Cara Pemesanan</h2>
+        <h2 class="tutorial-title">Tutorial Pemesanan</h2>
       </div>
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -520,8 +520,8 @@
         </div>
       </div>
     </section>
-
-    <!-- koleksi -->
+    <!-- section tutorial -->
+    <!-- section koleksi -->
     <section class="container-fluid koleksi mt-5" id="koleksi">
       <div class="koleksi-content row container-koleksi">
         <div class="col-12 col-lg-12 col-md-12">
@@ -669,7 +669,7 @@
       </div>
     </section>
 
-    <!-- START TESTIMONY -->
+    <!-- section testimoni -->
     <hr
       class="mx-auto"
       style="
@@ -811,9 +811,9 @@
         border: none;
       "
     />
-    <!--END TESTIMONY-->
+    <!-- section testimoni -->
 
-    <!--START VIDEO-->
+    <!-- section video -->
     <section>
       <div class="d-flex justify-content-center mt-5" data-aos="fade-up">
         <div class="col-lg-11 col-11 col-sm-11 col-md-11">
@@ -824,8 +824,9 @@
         </div>
       </div>
     </section>
-    <!--END VIDEO-->
+    <!-- section video -->
 
+    <!-- section kontak -->
     <section id="kontak" class="kontak section mt-5">
       <div class="container kontak-title" data-aos="fade-up">
         <h2>Kontak</h2>
@@ -875,8 +876,9 @@
         </div>
       </div>
     </section>
+    <!-- section kontak -->
 
-    <!--Content Modal-->
+    <!--Content Modal testimoni-->
     <div
       class="modal fade"
       id="modalTestimony"
@@ -1001,6 +1003,7 @@
     </div>
     <!--End Content Modal-->
 
+    <!-- footer -->
     <footer class="text-center text-lg-start text-white mt-5 shadow-lg">
       <div class="container p-4 pb-0">
         <hr class="mb-4" style="color: black" />
@@ -1060,6 +1063,7 @@
       </div>
     </footer>
 
+    <!-- chatbot -->
     <button class="btn-bot" id="openChatbot">
       <i class="bi bi-robot"></i>
       <span>Sikulit</span>
