--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
           <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="100">
             <div class="card-testimoni">
               <img
-                src="asset/img/testimoni_img/testimoni.jpg"
+                src="asset/img/testimoni_img/testimoni2.png"
                 alt="Testimoni Nauval"
                 style="object-fit: cover; height: 500px"
                 class="w-100"
@@ -732,7 +732,7 @@
           <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="500">
             <div class="card-testimoni">
               <img
-                src="asset/img/testimoni_img/testimoni.jpg"
+                src="asset/img/testimoni_img/testimoni3.png"
                 alt="Testimoni Nauval"
                 style="object-fit: cover; height: 500px"
                 class="w-100"
@@ -940,7 +940,7 @@
                   class="swiper-slide slide-modal overflow-hidden bg-body-tertiary"
                 >
                   <img
-                    src="asset/img/testimoni_img/testimoni.jpg"
+                    src="asset/img/testimoni_img/testimoni2.png"
                     alt="deskripsi Nauval"
                     class="rounded-4 shadow bg-body-tertiary"
                     style="
@@ -970,7 +970,7 @@
                   class="swiper-slide slide-modal overflow-hidden rounded bg-body-tertiary"
                 >
                   <img
-                    src="asset/img/testimoni_img/testimoni.jpg"
+                    src="asset/img/testimoni_img/testimoni3.png"
                     alt="deskripsi Nauval"
                     class="rounded-4 shadow bg-body-tertiary"
                     style="
