--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
             <div class="col-12 kelebihan-title" data-aos="fade-up">
               <h3>Kelebihan Kami</h3>
               <p class="text-center fst-italic fw-bold">
-                Tas Kulit Asli, Rasa Garut, Kualitas Dunia
+                Kulit Asli, Rasa Garut, Kualitas Dunia
               </p>
             </div>
             <div
